# notagen-pieces

./: README.md
Baroque_BachJohannSebastian_Choral/: output1.abc  output1.xml  output10.abc  output10.xml  output100.abc  output100.xml  output11.abc  output11.xml  output12.abc  output12.xml  output13.abc  output13.xml  output14.xml  output15.xml  output16.xml  output17.xml  output18.xml  output19.xml  output2.abc  output2.xml  output20.xml  output21.xml  output22.xml  output23.xml  output24.xml  output25.xml  output26.xml  output27.xml  output28.xml  output29.xml  output3.abc  output3.xml  output30.xml  output31.xml  output32.xml  output33.xml  output34.xml  output35.xml  output36.xml  output37.xml  (+104 more)
Baroque_HandelGeorgeFrideric_Keyboard/: output1.abc  output1.xml  output2.abc  output2.xml  output3.abc  output3.xml
Baroque_PachelbelJohann_Keyboard/: output1.abc  output1.xml  output2.abc  output2.xml  output3.abc  output3.xml
Baroque_PalestrinaGiovanni-Pierluigi_Choral/: output1.abc  output1.xml  output2.abc  output2.xml  output3.abc  output3.xml
Baroque_VivaldiAntonio_Art Song/: output1.abc  output1.xml  output2.abc  output2.xml
Classical_MozartLeopold_Orchestra/: output1.abc  output1.xml  output2.abc  output2.xml  output3.abc  output3.xml
Classical_PleyelIgnaz_Chamber/: output1.abc  output1.xml  output2.abc  output2.xml  (+2 more)
docs/: README.md  index.html  pyproject.toml
docs/data/A/: output16-1.xml  output26-4.xml  output28-2.xml  output3-3.xml  output58-3.xml  output64-3.xml  output75-1.xml  output77-3.xml
docs/data/H/: 244.15-6.xml  294-4.xml  402-8.xml
(+179 files in other folders)
