[project]
name = "experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html2image>=2.0.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.0.0",
    "psychopy[notebook]>=2023.2.0",
    "pynput>=1.7.4",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "sweetbean>=1.3.17",
]
